--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -10,7 +10,7 @@
   &-logo 
     width: 80px
     cursor: pointer
-  &_title 
+  &__title 
     margin-left: 150px
   &-social
     &__list 
@@ -20,7 +20,7 @@
 
 @media (max-width: 1300px)
   .footer 
-    &_title 
+    &__title 
       display: none
 
 @media (max-width: 950px)
