--- a/sass/blocks/_compare.sass
+++ b/sass/blocks/_compare.sass
@@ -7,17 +7,17 @@
     align-items: center
     width: 50%
     font-size: 24px
-    // font-family: 'SONGER Grotesque'
-    letter-spacing: 4.5px
     justify-content: center
     text-align: center
     line-height: 1.4
     text-transform: uppercase
+    +thin
     p 
       max-width: 80%
     span
       display: block
       font-family: 'SONGER Grotesque'
+      letter-spacing: 4.5px
       font-size: 36px
       padding: 20px 0
   &-image 
