--- a/sass/projects/_project.sass
+++ b/sass/projects/_project.sass
@@ -35,6 +35,8 @@
     background-image: url("../img/9/hero/2.jpg")
   &_10
     background-image: url("../img/10/hero/1.jpg")
+  &_11
+    background-image: url("../img/11/hero/2.jpg")
   &__title
     text-align: left
     line-height: 1.2
@@ -49,7 +51,7 @@
     &_2 
       height: 3590px
     &_3 
-      height: 9900px
+      height: 8800px
     &_4 
       height: 3600px
     &_5 
@@ -64,6 +66,8 @@
       height: 10990px
     &_10
       height: 3900px
+    &_11
+      height: 5180px
 
 
 @media (max-width: 1350px)
