--- a/sass/blocks/_compare.sass
+++ b/sass/blocks/_compare.sass
@@ -12,27 +12,40 @@
     line-height: 1.4
     text-transform: uppercase
     +thin
+    // letter-spacing: 2px
+    // font-family: 'SONGER Grotesque'
     p 
       max-width: 80%
-    span
-      display: block
-      font-family: 'SONGER Grotesque'
-      letter-spacing: 4.5px
-      font-size: 36px
-      padding: 20px 0
   &-image 
     width: 50%
   &_dark
     background-color: #1f1b18
     color: $light-color
 
+@media (max-width: 1150px)
+  .compare 
+    &__text 
+      font-size: 20px
+
+@media (max-width: 850px)
+  .compare 
+    &__text 
+      font-size: 18px
+
 @media (max-width: 750px)
   .compare 
     &-block 
       flex-direction: column
       &:first-child 
-        .compare-text
+        .compare__text
           order: -1
+      &:nth-child(2) 
+        .compare__text
+          background-color: $dark-color
+          color: $light-color
     &__text, &-image 
       width: 100%
+      font-size: 16px
+      p 
+        max-width: 95%
     
