--- a/css/style.css
+++ b/css/style.css
@@ -2696,11 +2696,11 @@ input.error {
 }
 
 .project-portfolio_2 {
-  height: 3590px;
+  height: 3580px;
 }
 
 .project-portfolio_3 {
-  height: 8800px;
+  height: 8780px;
 }
 
 .project-portfolio_4 {
@@ -2716,19 +2716,19 @@ input.error {
 }
 
 .project-portfolio_7 {
-  height: 3220px;
+  height: 3210px;
 }
 
 .project-portfolio_8 {
-  height: 5120px;
+  height: 5110px;
 }
 
 .project-portfolio_9 {
-  height: 10990px;
+  height: 10980px;
 }
 
 .project-portfolio_10 {
-  height: 3900px;
+  height: 3880px;
 }
 
 .project-portfolio_11 {
@@ -2743,7 +2743,31 @@ input.error {
     height: 3070px;
   }
   .project-portfolio_3 {
-    height: 8030px;
+    height: 7520px;
+  }
+  .project-portfolio_4 {
+    height: 3075px;
+  }
+  .project-portfolio_5 {
+    height: 7530px;
+  }
+  .project-portfolio_6 {
+    height: 3970px;
+  }
+  .project-portfolio_7 {
+    height: 2750px;
+  }
+  .project-portfolio_8 {
+    height: 4370px;
+  }
+  .project-portfolio_9 {
+    height: 9410px;
+  }
+  .project-portfolio_10 {
+    height: 3335px;
+  }
+  .project-portfolio_11 {
+    height: 4430px;
   }
 }
 
@@ -2761,7 +2785,31 @@ input.error {
     height: 2430px;
   }
   .project-portfolio_3 {
-    height: 8030px;
+    height: 5970px;
+  }
+  .project-portfolio_4 {
+    height: 2435px;
+  }
+  .project-portfolio_5 {
+    height: 5990px;
+  }
+  .project-portfolio_6 {
+    height: 3160px;
+  }
+  .project-portfolio_7 {
+    height: 2180px;
+  }
+  .project-portfolio_8 {
+    height: 3480px;
+  }
+  .project-portfolio_9 {
+    height: 7465px;
+  }
+  .project-portfolio_10 {
+    height: 2630px;
+  }
+  .project-portfolio_11 {
+    height: 3520px;
   }
 }
 
@@ -2776,7 +2824,31 @@ input.error {
     height: 1920px;
   }
   .project-portfolio_3 {
-    height: 8030px;
+    height: 4710px;
+  }
+  .project-portfolio_4 {
+    height: 1925px;
+  }
+  .project-portfolio_5 {
+    height: 4720px;
+  }
+  .project-portfolio_6 {
+    height: 2490px;
+  }
+  .project-portfolio_7 {
+    height: 1720px;
+  }
+  .project-portfolio_8 {
+    height: 2740px;
+  }
+  .project-portfolio_9 {
+    height: 5890px;
+  }
+  .project-portfolio_10 {
+    height: 2080px;
+  }
+  .project-portfolio_11 {
+    height: 2775px;
   }
 }
 
@@ -2788,10 +2860,34 @@ input.error {
     height: 3530px;
   }
   .project-portfolio_2 {
-    height: 1350px;
+    height: 1345px;
   }
   .project-portfolio_3 {
-    height: 8030px;
+    height: 3300px;
+  }
+  .project-portfolio_4 {
+    height: 1350px;
+  }
+  .project-portfolio_5 {
+    height: 3315px;
+  }
+  .project-portfolio_6 {
+    height: 1750px;
+  }
+  .project-portfolio_7 {
+    height: 1210px;
+  }
+  .project-portfolio_8 {
+    height: 1925px;
+  }
+  .project-portfolio_9 {
+    height: 4130px;
+  }
+  .project-portfolio_10 {
+    height: 1460px;
+  }
+  .project-portfolio_11 {
+    height: 1950px;
   }
 }
 
@@ -2804,37 +2900,109 @@ input.error {
     max-width: 220px;
   }
   .project-portfolio_1 {
-    height: 9620px;
+    height: 9595px;
   }
   .project-portfolio_2 {
-    height: 3650px;
+    height: 3625px;
   }
   .project-portfolio_3 {
-    height: 8030px;
+    height: 9095px;
+  }
+  .project-portfolio_4 {
+    height: 3650px;
+  }
+  .project-portfolio_5 {
+    height: 9120px;
+  }
+  .project-portfolio_6 {
+    height: 4590px;
+  }
+  .project-portfolio_7 {
+    height: 3210px;
+  }
+  .project-portfolio_8 {
+    height: 5210px;
+  }
+  .project-portfolio_9 {
+    height: 11370px;
+  }
+  .project-portfolio_10 {
+    height: 3785px;
+  }
+  .project-portfolio_11 {
+    height: 5160px;
   }
 }
 
 @media (max-width: 414px) {
   .project-portfolio_1 {
-    height: 8280px;
+    height: 8265px;
   }
   .project-portfolio_2 {
-    height: 3150px;
+    height: 3125px;
   }
   .project-portfolio_3 {
-    height: 8030px;
+    height: 7835px;
+  }
+  .project-portfolio_4 {
+    height: 3145px;
+  }
+  .project-portfolio_5 {
+    height: 7850px;
+  }
+  .project-portfolio_6 {
+    height: 3955px;
+  }
+  .project-portfolio_7 {
+    height: 2770px;
+  }
+  .project-portfolio_8 {
+    height: 4490px;
+  }
+  .project-portfolio_9 {
+    height: 9795px;
+  }
+  .project-portfolio_10 {
+    height: 3260px;
+  }
+  .project-portfolio_11 {
+    height: 4445px;
   }
 }
 
 @media (max-width: 340px) {
   .project-portfolio_1 {
-    height: 7480px;
+    height: 7470px;
   }
   .project-portfolio_2 {
-    height: 2850px;
+    height: 2825px;
   }
   .project-portfolio_3 {
-    height: 8030px;
+    height: 7080px;
+  }
+  .project-portfolio_4 {
+    height: 2840px;
+  }
+  .project-portfolio_5 {
+    height: 7095px;
+  }
+  .project-portfolio_6 {
+    height: 3575px;
+  }
+  .project-portfolio_7 {
+    height: 2505px;
+  }
+  .project-portfolio_8 {
+    height: 4055px;
+  }
+  .project-portfolio_9 {
+    height: 8845px;
+  }
+  .project-portfolio_10 {
+    height: 2950px;
+  }
+  .project-portfolio_11 {
+    height: 4020px;
   }
 }
 /*# sourceMappingURL=style.css.map */
