--- a/css/style.css
+++ b/css/style.css
@@ -464,6 +464,7 @@ a {
   padding: 12px;
   outline: none;
   background-color: transparent;
+  letter-spacing: 1.2px;
   color: #ffffff;
 }
 
@@ -471,8 +472,24 @@ a {
   border-bottom: 1px solid #ffffff;
 }
 
-input.error {
-  border-bottom: 1px solid #e51c1c;
+input.error::-webkit-input-placeholder {
+  color: #A00B36;
+}
+
+input.error:-ms-input-placeholder {
+  color: #A00B36;
+}
+
+input.error::-ms-input-placeholder {
+  color: #A00B36;
+}
+
+input.error::placeholder {
+  color: #A00B36;
+}
+
+input.error:focus {
+  border-bottom: 1px solid #A00B36;
 }
 
 .button {
