--- a/src/sass/blocks/_info.sass
+++ b/src/sass/blocks/_info.sass
@@ -27,6 +27,7 @@
     margin-bottom: 15px
     min-height: 52px
   &__text 
+    max-width: 100%
     text-align: center
     +thin
     letter-spacing: 1px
